# tradr

./: CONTRIBUTING.md  LICENSE.md  NOTICE  README.md  install.sh  pyproject.toml
.github/workflows/: publish.yml
src/tradr/: __init__.py  app.py  commands.py  dev.py  groq.py  market.py  prompt.txt  trading.py
src/tradr/styles/: layout.tcss
src/tradr/widgets/: ai.py  chart.py  watchlist.py
