[project]
name = "tradr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wiseman-umanah", email = "wisemanumanah@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "rich>=14.3.3",
    "textual>=8.2.3",
    "textual-dev>=1.8.0",
]

[project.scripts]
tradr = "tradr:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
